--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ language: android
 
 android:
   components:
-  - build-tools-22.0.1
-  - android-22
+  - build-tools-23.0.2
+  - android-23
   - extra
 
 before_install:
-  - env
+  - env | sort
 
 script: gradle test
