--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@ language: android
 
 android:
   components:
-  - build-tools-23.0.2
-  - android-23
-  - extra
+    - tools
+    - build-tools-23.0.2
+    - android-23
+    - extra
 
 before_install:
   - env | sort
